--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.3",
+    "@astrojs/react": "^4.2.3",
     "@astrojs/starlight": "^0.33.0",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.2.4",
     "astro": "^5.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sharp": "^0.32.5"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1"
   }
 }
